--- a/learn/pubspec.yaml
+++ b/learn/pubspec.yaml
@@ -45,6 +45,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  #GetX状态管理框架 https://pub.flutter-io.cn/packages/get
+  get: 4.3.7
+  # 网络请求库 https://github.com/flutterchina/dio
+  dio: 4.0.0
+  #上拉刷新、下拉加载
+  pull_to_refresh: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
